# ZEUS-FRAMEWORK

./: .dockerignore  .env.docker.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  STACK.md  docker-compose.yml  install.sh  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
config/: .env.example  config.example.yaml
content_automation/: COMPLETE_COST_AUDIT.md  COST_BREAKDOWN_ANALYSIS.md  COST_OPTIMIZATION_REPORT.md  Dockerfile  ENHANCED_CONTENT_IDEAS.md  README.md  content_ideas_processor.py  database.py  docker-compose.yml  docker-zeus.sh  enhanced_content_ideas.py  k8s-deployment.yaml  k8s-secrets.yaml  main.py  monitor.py  nginx.conf  orchestrator.py  requirements.txt  requirements_enhanced.txt  setup.py  setup_content_ideas.sh  setup_google_workspace.sh  zeus.sh
content_automation/architecture/: zeus_content_pipeline_architecture.md
content_automation/pipelines/: article_pipeline.py  carousel_pipeline.py  video_pipeline.py
core/: SOUL.md  cli.py  pyproject.toml  run_agent.py  setup-hermes.sh  toolsets.py
core/acp_adapter/: server.py
core/agent/: anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py
core/cron/: jobs.py  scheduler.py
core/gateway/: run.py
core/hermes_cli/: __init__.py  auth.py  banner.py  config.py  main.py  mcp_config.py  models.py  setup.py  skin_engine.py  status.py
core/tools/: fal_reliability.py  (+2 more)
deploy/: .env.prod.example  Caddyfile  README.md  bootstrap.sh  docker-compose.prod.yml  zeus-prod-entrypoint.sh
docker/: init_pgvector.sql  zeus-entrypoint.sh
docs/: README.md  architecture.md  content-pipeline.md  cron.md  deployment.md  memory.md  skills.md
memory/: MEMORY.example.md  README.md  USER.example.md
scripts/: cron_catchup.sh  setup_content_cron.py  start_hermes_pg.sh  zeus-docker.sh  zeus-upgrade.sh
setup/: OPENCLAW.md  PGVECTOR_SETUP.md
soul/: SOUL.md
stack/: hermes_stack.py
tests/: README.md  test_content_types.py  test_stack.py
(+79 files in other folders)
